--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}"/>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    
+    <h1>Get Weather Conditions</h1>
+    <form action="/weather">
+        <input type="text" name="city" id="city" placeholder="Enter a city">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
