--- a/static/style.css
+++ b/static/style.css
@@ -6,14 +6,17 @@
 
 body {
     padding: 2rem;
-    background-color: #333;
-    color: whitesmoke;
-    min-height: 100vh;
+    background-image:url("sky.avif");
+    color: rgb(33, 32, 32);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     font-size: 2rem;
+    text-align: center;
 }
 
 input, button {
