--- a/templates/city_not_found.html
+++ b/templates/city_not_found.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Get Weather Details</h1>
+    <h1>City Not Found!!</h1>
+    <h2>Enter Valid City Name</h2>
     <form action="/weather">
         <input type="text" name="city" id="city" placeholder="Enter a city">
         <button type="submit">Submit</button>
