--- a/templates/weather.html
+++ b/templates/weather.html
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Get Weather Details</h1>
+    <!--<h1>{{title}} Weather</h1>-->
+    <h1>Weather Details of {{title}}</h1>
+    <p>{{status}} and {{temp}} &deg;</p>
+    <p>Feels like {{feels_like}} &deg;</p>
     <form action="/weather">
         <input type="text" name="city" id="city" placeholder="Enter a city">
         <button type="submit">Submit</button>
